@@ -8,6 +8,7 @@
   * Update subterfugue tests to work when subterfugue is using python >=2.2.
   * Document the messageid/mid keywords in the expretrieve expressions section of the manpage.
   * Fix ngetlite reusing a va_list (caused segfault on opteron.)
+  * Fix segfault on empty group name.
 
 2002-12-24 v0.23:
   * Add --decode arg so -k and -K can be negated.
